Logger_code_Base/force-app/main/default/objects/Logger__c/Logger__c.object-meta.xml
<CustomObject>
    <description>Custom Logger object used for apex logging.</description>
    <label>Logger</label>
    <nameField>
        <label>Logger Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loggers</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>