Logger_code_Base/force-app/main/default/objects/Logger__c/fields/Exception_Type__c.field-meta.xml
<CustomField>
    <fullName>Exception_Type__c</fullName>
    <description>The type of the Apex exception that was logged.</description>
    <label>Exception Type</label>
    <type>TextArea</type>
</CustomField>