Logger_code_Base/force-app/main/default/objects/Logger__c/fields/Method__c.field-meta.xml
<CustomField>
    <fullName>Method__c</fullName>
    <description>The name of the method where a log event occurred.</description>
    <label>Method</label>
    <length>30</length>
    <type>Text</type>
</CustomField>