Logger_code_Base/force-app/main/default/objects/Logger__c/fields/RecordId__c.field-meta.xml
<CustomField>
    <fullName>RecordId__c</fullName>
    <description>Related record id of the logging if applicable</description>
    <label>RecordId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>